2014-11-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Adjust call of exec_nasl_script
	by providing the oid.
	(nasl_thread_args): Extend struct by element "oid".
	(nasl_plugin_launch): Add parameter "oid" and use it for struct
	nasl_thread_args.
	(nasl_thread): Adjust call of exec_nasl_script providing the oid.

	* src/pluginload.h: Adjust proto for nasl_plugin_launch accordingly.

	* src/pluginlaunch.c (plugin_launch): Adjust call of nasl_plugin_launch
	by providing NULL as oid.

2014-11-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/comm.c (send_plug_info): It is guaranteed that a NVTI
	has a OID, therefore simpify the code. Also remove some uneeded
	setting of variables as they are never used.

2014-11-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Remove any use of the "OID" arglist element of a plugin arglist
	structure.

	* src/attack.c (launch_plugin): The plugins' arglist name is
	the OID, so use this instead of aglist element "OID".

	* src/pluginlaunch.c (process_internal_msg, update_running_processes,
	read_running_processes, plugin_launch): The plugins' arglist name is
	the OID, so use this instead of aglist element "OID".

	* src/comm.c (send_plug_info, plugin_send_infos, qsort_cmp,
	_get_plug_by_oid): The plugins' arglist name is
	the OID, so use this instead of aglist element "OID".

	* src/pluginscheduler.c (hash_add, enable_plugin_and_dependencies,
	plugins_scheduler_init): The plugins' arglist name is the OID, so
	use this instead of aglist element "OID".

2014-11-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (reload_openvassd, main): Exit on plugins reload failure.

	* src/pluginload.c (plugins_reload_from_dir): Stop loading plugins after
	encountering 20 erroneous plugins.

2014-11-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Instead of the filename, use